# browser-mcp-over-cdp

./: .gitignore  README.md  config-example.json  mcp-config-example.json  package-lock.json  package.json  pyproject.toml  test.js  tsconfig.json
langChain/: babel.config.json  langgraph.json  package-lock.json  package.json  tsconfig.json
langChain/src/: planAndExecWithMCP.ts  webventurer.ts
selenoid/: browsers.json  docker-compose.yml
src/: A11yTreeSnapshotTaker.ts  CDP.ts  CDPInteractor.ts  ChromeDriver.ts  DomInteractionsOperator.ts  DomSnapshotTaker.ts  MCP.ts  VisualSnapshotTaker.ts  cdp.py  mcp-server.py  playground.ipynb
src/cdp/: Accessibility.ts  CSS.ts  Console.ts  DOM.ts  DOMDebugger.ts  DOMSnapshot.ts  Input.ts  Network.ts  Overlay.ts  Page.ts  Profiler.ts  Runtime.ts  Target.ts
tests/: A11yTreeSnapshotTaker.test.ts  DomInteractionsOperator.test.ts  cdp.test.ts  tools-consequences.test.ts
