[project]
name = "browser-mcp-over-cdp"
version = "0.1.0"
description = "MCP Server that manages a Chrome browser using the Chrome DevTools Protocol (CDP)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "selenium>=4.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
